// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxOffcanvasBody customize 1`] = `
<div>
  <div
    class="offcanvas-body bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxOffcanvasBody component 1`] = `
<div>
  <div
    class="offcanvas-body"
  />
</div>
`;
